--- a/src/components/Chat/MessageForm/MessageForm.module.scss
+++ b/src/components/Chat/MessageForm/MessageForm.module.scss
@@ -14,3 +14,10 @@
   background: #3a5cbd;
   border-radius: 4rem;
 }
+
+.checkboxWrapper {
+  position: absolute;
+  bottom: 18rem;
+  left: 420rem;
+  z-index: 999999;
+}
