--- a/src/components/TasksToDisplay/Lecture/ant.css
+++ b/src/components/TasksToDisplay/Lecture/ant.css
@@ -1,9 +1,5 @@
-:where(.css-dev-only-do-not-override-fpg3f5).ant-modal .ant-modal-content {
+.pdfReader :where(.css-dev-only-do-not-override-fpg3f5).ant-modal .ant-modal-content {
   padding: 0;
   /* border-radius: 0; */
   box-shadow: none;
-}
-
-.ant-btn {
-  margin: 8rem;
 }
