--- a/src/components/TasksToDisplay/Lecture/LectureContructor./LectureConstructor.module.scss
+++ b/src/components/TasksToDisplay/Lecture/LectureContructor./LectureConstructor.module.scss
@@ -7,7 +7,7 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-evenly;
-
+  margin-bottom: 40rem;
   border-radius: 4rem;
   background: #fff;
   box-shadow: 0 0 16rem 0 rgba(0, 0, 0, 0.12);
