--- a/src/components/TasksToDisplay/Test/Test.module.scss
+++ b/src/components/TasksToDisplay/Test/Test.module.scss
@@ -1,7 +1,7 @@
-.lectureContainer {
+div.testContainer {
   height: 100%;
   overflow-y: auto;
-  padding-inline: 24rem;
+  padding-inline: 75rem;
 
   & h2,
   & h3,
@@ -33,7 +33,7 @@
     width: 100%;
     margin-bottom: 16rem;
   }
-  
+
   & .titleInput {
     border: none;
     outline: 0;
@@ -82,53 +82,32 @@
   }
 }
 
-.section {
-  margin-bottom: 60rem;
+.questionWrapper {
+  padding-inline: 24rem;
+  margin-bottom: 52rem;
+  border-radius: 4rem;
+  box-shadow: 0 0 3.70673rem 0 rgba(0, 0, 0, 0.12);
 
-  &:last-child {
-    margin-bottom: 0;
+  .questionHeader {
+    display: flex;
+    padding-block: 16rem;
+    gap: 16rem;
+    justify-content: space-between;
+    align-items: center;
+
+    border-bottom: 1rem solid #cfcfcf;
+
+    & span {
+      color: rgba(0, 0, 0, 0.5);
+      font-family: Inter, sans-serif;
+      font-size: 16rem;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+    }
+
+    & .score {
+      font-size: 14rem;
+    }
   }
-}
-
-.sectionPDF {
-  & h3 {
-    margin-bottom: 24rem;
-  }
-}
-
-.sectionAudio {
-  & h3 {
-    margin-bottom: 16rem;
-  }
-
-  & audio {
-    display: block;
-    width: 80%;
-    margin: 0 auto;
-  }
-}
-
-.sectionTitle {
-  margin-bottom: 16rem;
-  font-size: 16rem;
-}
-
-h4.sectionSubTitle {
-  margin-bottom: 8rem;
-  font-size: 16rem;
-  color: rgba(0, 0, 0, 0.7);
-}
-
-.sectionContentWrapper {
-  color: #000;
-  text-align: justify;
-  font-family: Inter, sans-serif;
-  font-size: 14rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22rem;
-}
-
-.modalWrap {
-  background: red;
 }
