--- a/src/pages/CoursesPage/CourseDetailPage/CourseIntructionPage/InstructionsCategoriesList/InstructionsCategoriesList.module.scss
+++ b/src/pages/CoursesPage/CourseDetailPage/CourseIntructionPage/InstructionsCategoriesList/InstructionsCategoriesList.module.scss
@@ -12,8 +12,14 @@
     box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.12);
     position: relative;
 
-    & > h3 {
+    &:not(.addItem) {
+      min-height: 200rem;
+    }
+
+    & > h3,
+    & > input {
       padding: 20rem 0;
+      min-height: 61rem;
       color: rgba(0, 0, 0, 0.5);
       font-family: Inter, sans-serif;
       font-size: 16rem;
@@ -22,6 +28,13 @@
       line-height: normal;
       text-transform: capitalize;
       border-bottom: 1rem solid #b3b3b3;
+    }
+
+    & > input {
+      width: 100%;
+      border: none;
+      border-bottom: 1rem solid #b3b3b3;
+      outline: none;
     }
 
     &::before {
@@ -65,18 +78,32 @@
       fill: #000;
       fill-opacity: 0.5;
     }
-  } 
+  }
 }
 
 .detailPanel {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 8rem;
   position: absolute;
   top: 22rem;
   right: 20rem;
+  height: 16rem;
+
+  & button {
+  }
+
+  & > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+  }
+
+  & button svg {
+    width: 16px;
+  }
 }
 
 li.addItem {
