--- a/src/components/shared/LessonAddModal/LessonAddModal.module.scss
+++ b/src/components/shared/LessonAddModal/LessonAddModal.module.scss
@@ -36,6 +36,11 @@
   display: flex;
   gap: 16rem;
 
+  & > div {
+    flex-shrink: 0;
+    flex-grow: 0;
+  }
+
   &:last-child {
     margin-bottom: 40rem;
   }
@@ -43,21 +48,21 @@
 
 .formRow:nth-child(1) {
   & > div {
-    flex-basis: calc(25% - (16rem * 3 / 4));
+    width: calc(25% - (16rem * 3 / 4));
   }
 }
 
 .formRow:nth-child(2),
 .formRow:nth-child(5) {
   & > div {
-    flex-basis: calc(50% - (16rem * 1 / 2));
+    width: calc(50% - (16rem * 1 / 2));
   }
 }
 
 .formRow:nth-child(3),
 .formRow:nth-child(4) {
   & > div {
-    flex-basis: calc(100% - (16rem * 0 / 1));
+    width: calc(100% - (16rem * 0 / 1));
   }
 }
 
