--- a/src/components/TasksToDisplay/Lecture/LectureContructor./LectureParts/VideoPart/VideoPart.module.scss
+++ b/src/components/TasksToDisplay/Lecture/LectureContructor./LectureParts/VideoPart/VideoPart.module.scss
@@ -1,22 +1,16 @@
-.presentWrapper {
+.videoWrapper {
   padding: 24rem 16rem;
   border-radius: 2px;
   border: 1rem solid #7e7e7e;
   box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.12);
   margin-bottom: 48rem;
   position: relative;
-}
 
-.presentFileWrapper {
-  width: 1080rem;
-  height: 660rem;
-  margin: 0 auto 24rem;
-
-  border-radius: 2rem 2rem 0 0;
-  background: #f4f4f4;
-
-  /* Drop Shadow */
-  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
+  & audio {
+    display: block;
+    width: 1080rem;
+    margin: 0 auto 24rem;
+  }
 }
 
 .editPanel {
