--- a/src/components/TasksToDisplay/Lecture/Lecture.module.scss
+++ b/src/components/TasksToDisplay/Lecture/Lecture.module.scss
@@ -37,6 +37,7 @@
   & .titleInput {
     border: none;
     outline: 0;
+    resize: none;
     &:hover,
     &:focus {
       background: rgba(0, 0, 0, 0.12);
@@ -136,6 +137,10 @@ h4.sectionSubTitle {
 .videoWrapper {
   max-width: 1080rem;
   margin: 0 auto 24rem;
+
+  & video {
+    aspect-ratio: 16/9;
+  }
 }
 
 .sectionVideo > *:last-child,
@@ -225,5 +230,56 @@ h4.sectionSubTitle {
 
   &:hover span {
     text-decoration-line: underline;
+  }
+}
+
+.imagesWrapper {
+  width: 1080rem;
+  margin: 0 auto 24rem;
+  display: flex;
+  justify-content: center;
+  gap: 64rem;
+}
+
+.imageWrapper {
+  flex: 1;
+  border-radius: 2rem;
+  overflow: hidden;
+
+  border-radius: 4rem;
+  background: #fff;
+  box-shadow: 0 0 3.70673rem 0 rgba(0, 0, 0, 0.12);
+
+  & > div:first-child {
+    width: 100%;
+    aspect-ratio: 290/195;
+  }
+  // height: 195rem;
+
+  & img {
+    display: block;
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    object-fit: cover;
+  }
+
+  .descWrapper {
+    padding: 8rem 16rem;
+
+    & input,
+    & p {
+      width: 100%;
+      color: #000;
+      font-family: Inter, sans-serif;
+      font-size: 16rem;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+    }
+
+    & input::placeholder {
+      color: #d9d9d9;
+    }
   }
 }
