--- a/src/components/TasksToDisplay/Lecture/Lecture.module.scss
+++ b/src/components/TasksToDisplay/Lecture/Lecture.module.scss
@@ -215,6 +215,8 @@ h4.sectionSubTitle {
 }
 
 .linkWrapper {
+  width: 1080rem;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   gap: 8rem;
