--- a/src/components/TasksToDisplay/Test/Test.module.scss
+++ b/src/components/TasksToDisplay/Test/Test.module.scss
@@ -2,6 +2,27 @@ div.testContainer {
   height: 100%;
   overflow-y: auto;
   padding-inline: 75rem;
+  padding-bottom: 56rem;
+
+  & .submitTestBtnWrapper {
+    display: flex;
+    justify-content: center;
+    & button.completeBtn {
+      background: #39ba6d;
+      border: none;
+      border-radius: 4rem;
+      height: 32rem;
+      padding: 0 20rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8rem;
+
+      & span {
+        color: #fff;
+      }
+    }
+  }
 
   & h2,
   & h3,
